--- a/homework/Week7_Lab/7_bayes_viz.Rmd
+++ b/homework/Week7_Lab/7_bayes_viz.Rmd
@@ -229,8 +229,8 @@ Now we've run two candidate models let's do some posterior predictive checks. Th
 ```{r}
 set.seed(1856)
 y <- ds$log_weight
-yrep1 <- extract(mod1)[["log_weight_rep"]]
-yrep2 <- extract(mod2)[["log_weight_rep"]] # will need mod2 for later
+yrep1 <- rstan::extract(mod1)[["log_weight_rep"]]
+yrep2 <- rstan::extract(mod2)[["log_weight_rep"]] # will need mod2 for later
 samp100 <- sample(nrow(yrep1), 100)
 ppc_dens_overlay(y, yrep1[samp100, ])  + ggtitle("distribution of observed versus predicted birthweights")
 ```
